--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-web-components",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "packageManager": "yarn@4.7.0",
   "dependencies": {
